--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,11 @@ a img {
 /* END RESET*/
      
 /* GLOBAL STYLES */
+html {
+  box-shadow: 0 0 0 30px #000 inset;
+  padding: 0 30px 30px 30px;
+}
+
 body {
   font-family: helvetica, arial, sans;
 }
@@ -59,6 +64,14 @@ a {
   color: #f00;
 }
 /* HEADER STYLES */
+.header {
+  background-color: #000;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 40;
+}
+
 .header-nav {
   float:right;
   padding: 5.5vh 60px 0;
@@ -68,7 +81,7 @@ a {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a:hover {
-  color: #000;
+  color: #fff;
 }
 
 .header-nav > li {
@@ -76,17 +89,37 @@ a {
   margin-left: 1em;
 }
 
+.header-nav > li ~ li {
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  padding-left: 1em;
+}
+
 .header-nav a {
-  color: #000;
+  color: #fff;
+}
+
+.nav-links a {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
 
-.header-nav a:hover,
-.header-nav a:active {
+.nav-links a:hover,
+.nav-links a:active {
   color: #ed6e2f;
+}
+
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  left: -30px;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
 }
 
 .header-logo:hover,
@@ -94,6 +127,9 @@ a {
   opacity: 0.2;
 }
 
+.header-logo img {
+  width: 4.3vh;
+}
 /* HERO STYLES */
 .full-hero {
   background-color: #c7dbfc;
@@ -184,4 +220,50 @@ height: 0;
 .bio-copy a {
   padding: 10px;
   color: green; 
+}
+
+/*
+h2 + p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: center;
+}
+
+h2 ~ p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: center;
+}
+*/
+.footer {
+  background-color: #000;
+  padding: 10vh 0 15vh;
+  text-align: center;
+}
+
+.footer-logo img {
+ width: 50px;
+}
+
+.footer h3 {
+ color: #fff;
+ padding-top: 1.5em;
+ text-transform: uppercase;
+}
+
+.footer h3 span {
+ color: #aaa;
+}
+
+.footer-nav li {
+  display: inline-block;
+  margin-left: 2em 1em 0;
+}
+
+.footer-nav a {
+  color: #ccc;
 }
