--- a/css/main.css
+++ b/css/main.css
@@ -49,19 +49,29 @@ a img {
 /* GLOBAL STYLES */
 html {
   box-shadow: 0 0 0 30px #000 inset;
-  padding: 0 30px 30px 30px;
+  padding: 0 30px;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: helvetica, arial, sans;
+  min-height: 100vh;
 }
 
 h1 {
   font-size: 7vw;
   margin-top: 0;
 }
+h2 {
+  font-size: 2em;
+}
 a {
-  color: #f00;
+  color: #6397b5;
+}
+p {
+  line-height: 1.5;
+  margin: 0.75em 0;
 }
 /* HEADER STYLES */
 .header {
@@ -130,10 +140,48 @@ a {
 .header-logo img {
   width: 4.3vh;
 }
+.content-container {
+  display: flex;
+  /*flex-direction: column;*/
+  flex-grow: 1;
+  padding-top: 10vh;
+  width: 100%;
+}
 /* HERO STYLES */
 .full-hero {
+  #border: 1px solid red;
   background-color: #c7dbfc;
-  height: 50vh;
+  background-size: cover;
+  box-sizing: border-box;
+  height: 90vh;
+  padding-top: 10vh;
+}
+.full-hero:after{
+  bottom: 2vh;
+  border: 10px solid;
+  border-color: #fff transparent transparent;
+  #color: #fff;
+  #content: "﹀";
+  content: "";
+  height: 0;
+  left: 50%;
+  font-size: 36px;
+  position: absolute;
+  transform: translate(-50%, 0);
+  width: 0;
+  #display: block;
+}
+/*
+.full-hero:before{
+ content: "^";
+}
+.full-hero:after{
+ content: "^";
+}
+*/
+.hero-home {
+  background-image: url(/images/shark.jpg);
+  background-position: center top;
 }
 
 .full-hero:hover {
@@ -162,6 +210,33 @@ a {
 .social-link:hover {
   background-color: rgba(255, 0, 0, 0.5);
 }
+
+.hero-content {
+  #border: 1px solid black;
+  color: #fff;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.hero-content h1 {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 7vw;
+  margin-bottom: 0.25em;
+}
+
+.hero-content .social-link {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #557c83;
+}
+
+.hero-content .social-link:hover {
+  background-color: #000;
+  color: #fff;
+}
+
 .social-list {
   list-style: none;
   padding: 0;
@@ -170,7 +245,42 @@ a {
 .social-list > li {
   display: inline-block;
   margin:0 0.5em
-} 
+}
+
+.home-section {
+  margin: 6rem auto;
+  max-width: 980px;
+  width: 90vw;
+}
+
+.home-section h2 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.home-callout {
+  align-items: center;
+  background-color: #000;
+  color: #fff;
+  display: flex;
+  padding: 7vh 0;
+}
+
+.callout-title {
+  flex-grow: 1;
+  flex-basis: 0;
+  font-size: 5.75vw;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+.callout-copy {
+  flex-shrink: 0;
+  flex-basis: 55em;
+  padding: 0 3vw;
+  font-size: 0.8rem;
+}
+
 /* BIO STYLES */
 .bio-wrapper {
   font-size: 24px;
@@ -190,13 +300,13 @@ height: 0;
 }
  */
 .bio-box {
-  border: 1px solid black;
+  #border: 1px solid black;
   box-sizing: border-box;
   float: left;
   font-size: 1rem;
-  margin: 40px 1% 0;
-  padding: 2%;
-  width: 23%;
+  margin: 6rem 0 0;
+  padding: 0 3%;
+  width: 33%;
 }
 .bio-box img{
   width: 100%;
@@ -206,15 +316,15 @@ height: 0;
   font-size: 1.5em;
   margin: -40px 0 1em;
   text-align: center;
+  text-transform: uppercase;
 }
 .bio-box .social-link {
   display: block;
-  margin: 2em 0 1em;
+  margin: 2em auto 1em;
 }
 
 .bio-copy {
-  font-size: 1em;
-  line-height: 1.5;
+  font-size: 0.75em;
 }
 
 .bio-copy a {
@@ -230,7 +340,7 @@ h2 + p {
   max-width: 70%;
   text-align: center;
 }
-
+*/
 h2 ~ p {
   font-size: 0.8em;
   font-style: italic;
@@ -238,7 +348,73 @@ h2 ~ p {
   max-width: 70%;
   text-align: center;
 }
-*/
+
+.col-three {
+  display: flex;
+  flex: 1;
+}
+
+.col {
+  box-sizing: border-box;
+  padding: 2em;
+}
+.col-three .col ~ .col {
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
+.col-three .col-nav {
+  flex: 0 1 15em;
+}
+.col-three .col-content {
+  flex: 1 1 0;
+}
+.col-three .col-aside {
+  flex: 0 1 20em;
+}
+
+.gallery-thumbs {
+  height: 90vh;
+  overflow: scroll;
+}
+
+.gallery-thumbs .current {
+  cursor: default;
+}
+
+.gallery-thumbs > div{
+  cursor: pointer;
+}
+
+.gallery-thumbs img{
+  box-sizing: border-box;
+  box-shadow: 0 0 0 5px transparent;
+  display: inline-block;
+  margin: 0 0 10px;
+  opacity: 0.5;
+  transition: all 0.5s ease-in-out;
+  width: 90%;
+}
+.gallery-thumbs img:hover {
+  width: 100%;
+  opacity: 1;
+}
+.gallery-thumbs .current img {
+  box-shadow: 0 0 0 5px #ed6e2f;
+  opacity: 1;
+}
+.gallery-photo {
+  position: relative;
+
+}
+.gallery-phpto img {
+  width: 100%;
+}
+.gallery-info {
+  font-size: 0.8rem;
+}
+.gallery-info h3{
+  margin-bottom: 1em;
+}
+
 .footer {
   background-color: #000;
   padding: 10vh 0 15vh;
