--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
   <title>Test Page: Don't Panic</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
   <link rel="stylesheet" href="/css/main.css">
 </head>
