--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,13 @@
 <li><a href="/">Home</a></li>
 <li><a href="/gallery">GALLERY</a></li>
-<li><a href="/blog">BLOG</a></li>
+<li class="dropdown">
+  <a class="drop-trigger" href="/blog">BLOG</a>
+  <ul class="drop-menu">
+    <li>Recent Posts</li>
+    {% for post in site.posts limit:5 %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+
+  </ul>
+</li>
 <li><a href="{{ site.posts.first.url }}">Newest Post</a></li>
