--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,11 @@ p {
   z-index: 40;
 }
 
+.mobile-menu-check,
+.show-mobile-menu {
+  display: none;
+}
+
 .header-nav {
   float:right;
   padding: 5.5vh 60px 0;
@@ -113,7 +118,8 @@ p {
   color: #fff;
 }
 
-.nav-links a {
+.nav-links a,
+.show-mobile-menu {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
@@ -145,6 +151,131 @@ p {
 .header-logo img {
   width: 4.3vh;
 }
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown:hover .drop-menu {
+  display: block;
+}
+ 
+.dropdown:hover .drop-trigger:after {
+  border-color: #ed6e2f transparent transparent;
+}
+
+.drop-trigger {
+  display: inline-block;
+  padding-right: 1.5em;
+  position: relative;
+}
+
+.drop-trigger:after {
+  border: 0.3em solid;
+  border-color: #fff transparent transparent;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 0;
+  top: 0.3em;
+  width: 0;
+}
+  
+.drop-menu {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  display: none;
+  list-style: none;
+  padding: 1em 0 0;
+  position: absolute;
+  right: 0;
+  z-index: 9;
+}
+
+.drop-menu:before {
+  border: 0.6em solid;
+  border-color: transparent transparent #fff;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 1em;
+  top: -0.1em;
+  width: 0;
+}
+
+.drop-menu li {
+  background-color: #fff;
+}
+
+.drop-menu li ~ li {
+  border-top: 1px dotted rgba(0, 0, 0, 0.1);
+}
+
+.drop-menu li:first-child {
+  border-radius: 5px 5px 0 0;
+  color: #999;
+  font-size: 0.5em;
+  padding: 1em 1em 0.25em;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+.drop-menu li:last-child {
+  border-radius: 0 0 5px 5px;
+}
+
+.drop-menu a {
+  color: #333;
+  display: block;
+  font-weight: normal;
+  padding: 0.5em 2em 0.5em 1em;
+  text-align: left;
+  text-transform: none;
+  white-space: nowrap;
+}
+
+.drop-menu a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #333;
+}
+
+.footer .drop-menu {
+  bottom: 1em;
+}
+
+.footer .dropdown:hover .drop-trigger:after {
+  border-color: transparent transparent #ed6e2f;
+}
+
+.footer .drop-trigger:after {
+  border-color: transparent transparent #fff;
+}
+
+.footer .drop-menu:before {
+  display: none;
+}
+
+.footer .drop-menu:after {
+  border: 0.6em solid;
+  border-color: #fff transparent transparent;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 1em;
+  bottom: -1.1em;
+  width: 0;
+}
+
+/*
+.footer .dropdown:hover .drop-menu,
+.footer .drop-trigger:after {
+  display: none;
+}
+
+.footer .drop-trigger {
+  padding-right: 0;
+}
+*/
+
 .content-container {
   display: flex;
   /*flex-direction: column;*/
@@ -561,7 +692,7 @@ h2 ~ p {
  color: #aaa;
 }
 
-.footer-nav li {
+.footer-nav > li {
   display: inline-block;
   margin-left: 2em 1em 0;
 }
@@ -576,6 +707,40 @@ h2 ~ p {
     padding: 0;
   }
 
+  .show-mobile-menu {
+    display: block;
+    float: right;
+    font-weight: bold;
+    margin-top: 1.5vh;
+    padding: 1.5em;
+    position: relative;
+    text-transform: uppercase;
+  }
+/*
+  .header-nav {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    transition: all 0.5s ease-in-out;
+  }
+*/
+  
+  .header-nav {
+    background-color: #444;
+    box-sizing: border-box;
+    left: 0;
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    text-align: center;
+    top: 10vh;
+    transition: all 0.5s ease-in-out;
+    width: 100vw;
+    z-index: 9;
+  }
+
+/*
   .header-nav {
     padding: 2vh 1em 0 0;
   }
@@ -586,12 +751,52 @@ h2 ~ p {
   .header-nav > li ~ li {
     padding-left: 0.25em;
   }
+*/
+  .header-nav li {
+    display: block;
+    margin-top: 1em;
+  }
+  
+  .header-nav li ~ li {
+    border: 0;
+    padding: 0;
+  }
+
+  .header-nav li:last-child {
+    margin-bottom: 1em;
+  }
+
+  .header-nav li:first-child a {
+    color: #fff;
+  }
+
+  .header-nav .dropdown:hover .drop-menu,
+  .header-nav .drop-trigger:after {
+    display: none;
+  }  
+
+  .mobile-menu-check:checked ~ .header-nav {
+    max-height: 1000px; 
+  }
+  
+  .mobile-menu-check:checked ~ .show-mobile-menu:after {
+    background-color: #000;
+    color: #ed6e2f;
+    content: "CLOSE";
+    left: 0;
+    position: absolute;
+    top: 1.5em;
+    width: 100%;
+    text-align: center;
+  }
+
   .nav-links a {
     font-size: 3.25vw;
   }
   .header-logo {
     left: auto;
   }
+
   .post-aside {
     display: none;
   }
@@ -645,6 +850,13 @@ h2 ~ p {
   .blog-cols .blog-recent {
     flex: 1;
     order: 0;
+  }
+  
+  .drop-menu {
+    width: 50vw;
+  }
+  .drop-menu a {
+    white-space: normal;
   }
 
 }
